# weatherchannel

./: .env.example  .gitignore  CLAUDE.md  SUMMARY.md  openclaw_weather_trader_handoff.md  pyproject.toml
docs/: architecture.md  data-dictionary.md  risk-policy.md
docs/runbooks/: first-run.md  go-live.md  incident-api-outage.md  incident-emergency-stop.md  incident-stale-data.md
engine/: __main__.py  cli.py  daemon.py  dashboard.py
engine/config/: defaults.py  loader.py  schema.py
engine/execution/: dry_run.py  executor.py  idempotency.py  live_adapter.py  simmer_client.py
engine/ingest/: clob_client.py  forecast_fetcher.py  gamma_client.py  market_scanner.py  noaa_client.py  slug_parser.py  staleness.py
engine/models/: common.py  execution.py  forecast.py  market.py  reporting.py  risk.py  signal.py
engine/pipeline/: exit_pipeline.py  scan_pipeline.py
engine/reporting/: formatters.py  health_checker.py  position_tracker.py  run_summarizer.py
engine/risk/: engine.py  state_tracker.py
engine/risk/checks/: cooldown.py  daily_loss.py  kill_switch.py  paused.py  per_city_exposure.py  position_size.py  slippage.py  (+3 more)
engine/signal/: calibration.py  edge_calculator.py  probability.py  signal_generator.py
engine/storage/: config_repo.py  database.py  forecast_repo.py  market_repo.py  order_repo.py  position_repo.py  risk_repo.py  signal_repo.py  state_repo.py
engine/tests/: conftest.py
ops/: daemon.sh
ops/configs/: default.yaml  example-live.yaml  live.yaml
ops/cron/: scan_cron.sh
skills/weather-trader/: SKILL.md
static/: dashboard.html
(+37 files in other folders)
